updating intro and deployment

--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,13 @@
 title: "Creative Coding with Twine"
 ---
 
-View slideshow: [Twine slides](/slides.md)
+Workshop for RUSS233 Experimental Literature
+
+2026.02.11
+
+Alice McGrath & Cameron Boucher
+
+[View slideshow](/slides.md)
 
 ## How To
 
@@ -83,6 +89,9 @@ Do you go left or right?
 - You can also get user input and store it in a variable:
 `What's your name? (input:2bind $name,"X","")`
 
+- To use the variable on the same passage, use a prompt for this:
+`(set: $name to (prompt: [What's your name?], "Name"))`
+
 - Variables can also hold numbers:
 `(set: $score to 1)`
 
@@ -142,3 +151,32 @@ Because Twine is designed for games, there isn't much built-in navigation. It ca
 - Texture
 - Hosted Games
 - Other options here: [Tools and Resources for Making Games](https://docs.google.com/document/d/1vIRlYDjwK7E8XufV5Cr0gYtmAvd0gWRORHF23JX28Ek/edit?tab=t.0)
+
+## Publishing guide
+
+A twine game can be deployed to a web server so that others can play the game. There are many options for webhosting services -- here are a few that are free to you:
+
+- Bryn Mawr: **Domain of One's Own** - [digital.brynmawr.edu](https://digital.brynmawr.edu/)
+- Haverford: **Haverford Sites** - [sites.haverford.edu](https://sites.haverford.edu/) 
+- GitHub Pages - [github.com](https://github.com/) - see [GitHub Pages documentation](https://docs.github.com/en/pages) (free with GitHub account)
+
+### Export your game from Twine
+- From the Twine top menu, go to **Build** -> **Publish to File** to export your game as html
+- Open it in a browser app to play it locally
+- Note on Filenames:
+  - By default, the filename of your game will include the title
+  - Edit the filename so it has no spaces in it - this will be part of your URL
+  - *Pro tip*: change the filename to `index.html`
+
+### Deployment using DoOO or Haverford Sites
+
+- Navigate to [digital.brynmawr.edu](https://digital.brynmawr.edu/) or [sites.haverford.edu](https://sites.haverford.edu/) and click on "Get Started" to log in
+  - If you haven't already, choose a domain name that is relatively short and unique to you
+- Upload your game:
+  - From your Dashboard, locate the "File Manager"
+  - Navigate to the folder called "public_html"
+  - Create a new sub-folder called "game"
+  - Upload your game to the "game" folder
+- Navigate to your game's URL
+  - Your game should now be public at **yourdomain.digital.brynmawr.edu/game/filename.html**
+  - If you changed the filename to index, your url will be **yourdomain.digital.brynmawr.edu/game**
