--- a/index.qmd
+++ b/index.qmd
@@ -123,13 +123,15 @@ Because Twine is designed for games, there isn't much built-in navigation. It ca
 
 ### Twine tutorials
 
+**NB**: If you are using a tutorial, make sure you know which story format it describes because syntax can be quite different
+
 - [Twine Cookbook]([https://twinery.org/cookbook/](https://twinery.org/cookbook/))
 - [Harlowe documentation](https://twine2.neocities.org/) - this is the standard story template
 - [Twine and Interactive Fiction Handbook (slides)](https://docs.google.com/presentation/d/1bNzxW39pYul2yVieuxaSsnB5SAexOde1Higr9mxs7EA/edit)
 - [Programming Historian: Interactive Text Games Using Twine](https://programminghistorian.org/en/lessons/interactive-text-games-using-twine)
+- [A Total Beginner's Guide to Twine 2.1](https://www.adamhammond.com/twineguide/) (videos)
 
-
-### Examples
+### Twine game examples
 
 #### Workshop examples
 
@@ -142,8 +144,12 @@ Because Twine is designed for games, there isn't much built-in navigation. It ca
 
 #### Examples in the wild
 
-- [Open Sorcery](https://abigailcorfman.com/Home/OpenSorcery) and its sequel [Open Sorcery Sea++](https://opensorcerygames.itch.io/open-sorcery-sea)
-- [16 Ways to Kill a Vampire at McDonalds](https://abigailcorfman.com/Home/Vampire)
+- [September 7th, 2020](https://caitkirby.com/downloads/Fall%202020.html) by Cait S. Kirby
+- [Depression Quest](http://www.depressionquest.com/) by Zoe Quinn
+- [First Day in the Office](https://gkirilloff.itch.io/first-day-in-the-office) by Gabi Kirilloff
+- [Open Sorcery](https://abigailcorfman.com/Home/OpenSorcery) and its sequel [Open Sorcery Sea++](https://opensorcerygames.itch.io/open-sorcery-sea) by Abigail Corfman
+- [16 Ways to Kill a Vampire at McDonalds](https://abigailcorfman.com/Home/Vampire) by Abigail Corfman
+- [Queers in Love at the End of the World](https://w.itch.io/end-of-the-world) by Anna Anthropy
 - Explore many more on itch.io: [Twine games on itch.io](https://itch.io/games/tag-twine) 
 
 ### Other tools for Creative Coding
