--- a/index.qmd
+++ b/index.qmd
@@ -14,13 +14,10 @@ Alice McGrath & Cameron Boucher
 
 ### About [Twine](https://twinery.org/)
 
-- Open-source tool for creating interactive fiction, games, and hypertext narratives
-- Output is simple HTML (Hyper Text Markup Language) that can be deployed on any web server
-- No-code editor that uses simple markup
-- Editor interface shows connections between passages
-- Designed to emphasize interactivity (user-input, randomness, variables)
-- Can be used in browser or in separate application
+- Twine is an open-source tool for creating interactive fiction, text-based games, and hypertext narratives
+- Twine has a no-code editor that uses simple markup, shows connections between passages as a network, and can be used in browser or as a standalone application
 - Twine games are stored in a markup language called [Twee](https://twinery.org/cookbook/terms/terms_twee.html) and can be edited in a text editor
+- Twine is designed to emphasize interactivity (user-input, randomness, variables)
 - Story format options change syntax and functionality
 	- **Harlowe** - default format (this what we are using for this workshop).
 	- Other options: Chapbook (beginner-friendly), SugarCube, Snowman (advanced)
@@ -170,10 +167,10 @@ Because Twine is designed for games, there isn't much built-in navigation. It ca
 
 ### Twine tutorials
 
-**NB**: If you are using a tutorial, make sure you know which story format it describes because syntax can be quite different
+**NB**: If you are using a tutorial, make sure you know which story format it describes because syntax can be quite different. My guides refer to Harlowe.
 
 - [Twine Cookbook]([https://twinery.org/cookbook/](https://twinery.org/cookbook/))
-- [Harlowe documentation](https://twine2.neocities.org/) - this is the standard story template
+- [Harlowe documentation](https://twine2.neocities.org/) - this is the standard story format
 - [Twine and Interactive Fiction Handbook (slides)](https://docs.google.com/presentation/d/1bNzxW39pYul2yVieuxaSsnB5SAexOde1Higr9mxs7EA/edit)
 - [Programming Historian: Interactive Text Games Using Twine](https://programminghistorian.org/en/lessons/interactive-text-games-using-twine)
 - [A Total Beginner's Guide to Twine 2.1](https://www.adamhammond.com/twineguide/) (videos)
@@ -193,7 +190,9 @@ Because Twine is designed for games, there isn't much built-in navigation. It ca
 
 - [September 7th, 2020](https://caitkirby.com/downloads/Fall%202020.html) by Cait S. Kirby
 - [Depression Quest](http://www.depressionquest.com/) by Zoe Quinn
+- [Dead Reference](https://samillingworth.itch.io/dead-reference) and [Bot or Not](https://samillingworth.itch.io/bot-or-not) by Sam Illingworth
 - [First Day in the Office](https://gkirilloff.itch.io/first-day-in-the-office) by Gabi Kirilloff
+- [Typing Challenge](https://managore.itch.io/daniel-linssens-typing-challenge) by Daniel Linssen
 - [Open Sorcery](https://abigailcorfman.com/Home/OpenSorcery) and its sequel [Open Sorcery Sea++](https://opensorcerygames.itch.io/open-sorcery-sea) by Abigail Corfman
 - [16 Ways to Kill a Vampire at McDonalds](https://abigailcorfman.com/Home/Vampire) by Abigail Corfman
 - [Queers in Love at the End of the World](https://w.itch.io/end-of-the-world) by Anna Anthropy
