--- a/index.qmd
+++ b/index.qmd
@@ -195,11 +195,15 @@ A twine game can be deployed to a web server so that others can play the game. T
 
 ## Resources
 
+### CSS Guides
+- Colors: [W3 named colors list](https://www.w3schools.com/cssref/css_colors.php)
+- Web-safe fonts: [W3 fonts](https://www.w3schools.com/cssref/css_websafe_fonts.php)
+
 ### Twine tutorials
 
 **NB**: If you are using a tutorial, make sure you know which story format it describes because syntax can be quite different. My guides refer to Harlowe.
 
-- [Twine Cookbook]([https://twinery.org/cookbook/](https://twinery.org/cookbook/))
+- [Twine Cookbook](https://twinery.org/cookbook/)
 - [Harlowe documentation](https://twine2.neocities.org/) - this is the standard story format
 - [Twine and Interactive Fiction Handbook (slides)](https://docs.google.com/presentation/d/1bNzxW39pYul2yVieuxaSsnB5SAexOde1Higr9mxs7EA/edit)
 - [Programming Historian: Interactive Text Games Using Twine](https://programminghistorian.org/en/lessons/interactive-text-games-using-twine)
